--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -61,7 +62,6 @@
                         <div class="links">
                             <a href="https://linkedin.com/in/username" target="_blank"><img src="Linkedin.png"></a>
                             <a href="https://github.com/username" target="_blank"><img src="Git.png"></a>
-                            <a href="https://instagram.com/username" target="_blank"><img src="Instagram.png">Instagram</a>
                         </div>
                     </div>
                     <div class="team-member">
@@ -71,7 +71,6 @@
                         <div class="links">
                             <a href="https://linkedin.com/in/username" target="_blank"><img src="Linkedin.png"></a>
                             <a href="https://github.com/username" target="_blank"><img src="Git.png"></a>
-                            <a href="https://instagram.com/username" target="_blank"><img src="Instagram.png"></a>
                         </div>
                     </div>
                     <div class="team-member">
@@ -81,13 +80,67 @@
                         <div class="links">
                             <a href="https://linkedin.com/in/username" target="_blank"><img src="Linkedin.png"></a>
                             <a href="https://github.com/username" target="_blank"><img src="Git.png"></a>
-                            <a href="https://instagram.com/username" target="_blank"><img src="Instagram.png"></a>
                         </div>
                     </div>
+                    <div class="team-member">
+                        <img src="image2.jpg" alt="XYZ XYZ">
+                        <h3>XYZ</h3>
+                        <p>Vice-Chairperson</p>
+                        <div class="links">
+                            <a href="https://linkedin.com/in/username" target="_blank"><img src="Linkedin.png"></a>
+                            <a href="https://github.com/username" target="_blank"><img src="Git.png"></a>
+                        </div>
+                    </div>
+                    <div class="team-member">
+                        <img src="image2.jpg" alt="XYZ XYZ">
+                        <h3>XYZ</h3>
+                        <p>Vice-Chairperson</p>
+                        <div class="links">
+                            <a href="https://linkedin.com/in/username" target="_blank"><img src="Linkedin.png"></a>
+                            <a href="https://github.com/username" target="_blank"><img src="Git.png"></a>
+                        </div>
+                    </div>
+                    <div class="team-member">
+                        <img src="image2.jpg" alt="XYZ XYZ">
+                        <h3>XYZ</h3>
+                        <p>Vice-Chairperson</p>
+                        <div class="links">
+                            <a href="https://linkedin.com/in/username" target="_blank"><img src="Linkedin.png"></a>
+                            <a href="https://github.com/username" target="_blank"><img src="Git.png"></a>
+                        </div>
+                    </div>
+                    <div class="team-member">
+                        <img src="image2.jpg" alt="XYZ XYZ">
+                        <h3>XYZ</h3>
+                        <p>Vice-Chairperson</p>
+                        <div class="links">
+                            <a href="https://linkedin.com/in/username" target="_blank"><img src="Linkedin.png"></a>
+                            <a href="https://github.com/username" target="_blank"><img src="Git.png"></a>
+                        </div>
+                    </div>
+                    <div class="team-member">
+                        <img src="image2.jpg" alt="XYZ XYZ">
+                        <h3>XYZ</h3>
+                        <p>Vice-Chairperson</p>
+                        <div class="links">
+                            <a href="https://linkedin.com/in/username" target="_blank"><img src="Linkedin.png"></a>
+                            <a href="https://github.com/username" target="_blank"><img src="Git.png"></a>
+                        </div>
+                    </div>
+                    <div class="team-member">
+                        <img src="image2.jpg" alt="XYZ XYZ">
+                        <h3>XYZ</h3>
+                        <p>Vice-Chairperson</p>
+                        <div class="links">
+                            <a href="https://linkedin.com/in/username" target="_blank"><img src="Linkedin.png"></a>
+                            <a href="https://github.com/username" target="_blank"><img src="Git.png"></a>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </section>
-
+        
         <section id="events" class="section">
             <div class="cont">
                 <h2>Our Events</h2>
