--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
                 <div class="team-grid">
                     <div class="team-member">
                         <img src="pfp.jpg" alt="Vaishnavi Rai">
-                        <h3>Vaishnavi Rai</h3>
-                        <p>Technical Head</p>
+                        <h3>Technical Head</h3>
+                        <p> Vaishnavi Rai</p>
                         <div class="links">
                             <a href="https://linkedin.com/in/username" target="_blank"><img src="Linkedin.png"></a>
                             <a href="https://github.com/username" target="_blank"><img src="Git.png"></a>
@@ -161,13 +161,14 @@
                 <p>Explore our latest blog posts and articles.</p>
             </div>
         </section>
-
+         
         <section id="projects" class="section">
             <div class="cont">
                 <h2>Our Projects</h2>
                 <p>Discover the projects we are working on.</p>
             </div>
         </section>
+      
 
         <section id="contact" class="section">
             <div class="cont">
