--- a/index.html
+++ b/index.html
@@ -42,7 +42,14 @@
         <section id="home" class="hero">
             <div class="cont">
                 <h2>Welcome to SNDT ACM-W</h2>
-                <p></p>
+                <p>
+                    Founded in 1999, the SNDT-ACM Student Chapter was the first ACM chapter established at SNDT Women’s University in Mumbai.<br>
+                    For over 25 years, the chapter has been dedicated to fostering technical competence among students in the fields of Computer Science,<br>
+                    Engineering, and Management, while also aiming to uplift and inspire women to excel in these disciplines.<br>
+                    As we mark a significant milestone in February 2024, the chapter remains committed to cultivating leadership qualities<br>
+                    and managerial skills, empowering its members to make meaningful contributions to both the technological and professional domains.
+                </p>
+                
                 <a href="#about" class="cta-button">Learn More</a>
             </div>
         </section>
