--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
                     For over 25 years, the chapter has been dedicated to fostering technical competence among students in the fields of Computer Science,<br>
                     Engineering, and Management, while also aiming to uplift and inspire women to excel in these disciplines.<br>
                     As we mark a significant milestone in February 2024, the chapter remains committed to cultivating leadership qualities<br>
-                    and managerial skills, empowering its members to make meaningful contributions to both the technological and professional domains.
+                    and managerial skills, empowering its members to make meaningful contributions to both the technological and professional domains.<br>
+                    <br>
                 </p>
                 
                 <a href="#about" class="cta-button">Learn More</a>
@@ -62,9 +63,9 @@
                     <div class="about-text">
                         <h2>Who are we?</h2>
                         <p>
-                            ACM-W is dedicated to advancing and empowering women in computing worldwide. 
+                            SNDT ACM-W Student Chapter is dedicated to advancing and empowering women in computing worldwide. 
                             Through mentorship, networking opportunities, and professional development programs, 
-                            ACM-W provides the resources and support necessary for women to succeed in the tech industry. 
+                            SNDT ACM-W provides the resources and support necessary for women to succeed in the tech industry. 
                             We celebrate and highlight the achievements of women making significant contributions 
                             to computing.
                         </p>
@@ -81,7 +82,7 @@
                     <div class="about-text">
                         <h2>What we do?</h2>
                         <p>
-                            ACM-W fosters a supportive environment where women can thrive in computing and technology. 
+                            SNDT ACM-W Student Chapter fosters a supportive environment where women can thrive in computing and technology. 
                             We organize workshops, events, and initiatives to build leadership skills, technical knowledge, 
                             and confidence. Our aim is to bridge the gender gap in the tech industry by encouraging 
                             women to take on leadership roles and excel in their careers.
